source/blender/editors/space_sequencer/sequencer_add.c
@@ -344,9 +344,6 @@ static int sequencer_add_scene_strip_exec(bContext *C, wmOperator *op)
   BLI_strncpy(seq->name + 2, sce_seq->id.name + 2, sizeof(seq->name) - 2);
   BKE_sequence_base_unique_name_recursive(&ed->seqbase, seq);
 
-  seq->scene_sound = BKE_sound_scene_add_scene_sound(
-      scene, seq, start_frame, start_frame + seq->len, 0);
-
   BKE_sequence_calc_disp(scene, seq);
   BKE_sequencer_sort(scene);
 
